[project]
name = "adam-optimizer"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (==2.3.1)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[poetry.tools]
packages = [
    {include = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
